<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LandingPage"
    android:background="@drawable/bg_scslam">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/user_name"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@id/textView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password"
        android:id="@+id/password"
        android:layout_below="@+id/username"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="36dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/passwordtext"
        android:layout_alignBottom="@+id/password"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/password"
        android:layout_toRightOf="@+id/password"
        android:layout_alignStart="@id/username"
        android:layout_alignLeft="@id/username"/>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/linear1"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="35dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_style"
            android:text="@string/login"
            android:id="@+id/btnlogin1"
            style="@style/button_text"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/linear1"
        android:layout_alignEnd="@+id/passwordtext"
        android:layout_alignRight="@+id/passwordtext"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_style"
            android:text="@string/exit"
            android:id="@+id/btnlogin2"
            style="@style/button_text"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/not_registered"
        android:id="@+id/textView2"
        android:layout_marginBottom="36dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/signup"
        android:id="@+id/textView3"
        style="@style/signup_text"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:layout_marginLeft="15dp"/>


</RelativeLayout>
